# zaparoo-frontend

./: .cmake-format.yaml  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile.arm32  Dockerfile.lint  Dockerfile.toolchain  README.md  justfile
.github/contributors/: signatures.json
.github/workflows/: ci.yml  lint-image-build.yml  toolchain-build.yml
cmake/: FindRust.cmake  SyncCxxqtQmlModules.cmake  ZaparooCompileOptions.cmake  ZaparooLint.cmake  ZaparooQmlModule.cmake  ZaparooRust.cmake
design/: README.md  launcher.qmlproject
design/previews/: MainPreview.qml
docs/: architecture.md  building.md  customization.md  native-core-poc.md  qml-gotchas.md  quickstart.md  style.md
packaging/: deploy-desktop.sh
resources/images/categories/: README.txt
resources/images/systems/: README.txt
rust/: Cargo.toml  deny.toml
rust/.cargo/: config.toml
rust/frontend/: Cargo.toml  build.rs
rust/frontend/src/: image_overrides.rs  lib.rs  media_image_cache.rs  media_meta_cache.rs  system_name_overrides.rs  system_names.rs
rust/launcher/: Cargo.toml  build.rs
rust/launcher/src/: lib.rs  main.rs  mister_runtime.rs
rust/launcher/src/cpp/: init.cpp
rust/launcher/src/models/: app_state.rs  browse.rs  build_info.rs  games.rs  games_state.rs  hub_state.rs  mod.rs  model_includes.h  notice.rs  recents.rs  settings.rs  systems.rs
rust/mock-core/src/: fixtures.rs  handler.rs
rust/zaparoo-core/src/: client.rs  config.rs  input_actions.rs  lib.rs  media_types.rs  persist.rs  platform.rs  platform_paths.rs  runtime.rs  systems_catalog.rs
scripts/: build-arm32.sh  build-toolchain.sh  deploy-mister.sh  run-dev.sh  run-macos-mister-core.sh
scripts/toolchain/: VERSION
src/app/: custom_image_provider.cpp  custom_image_provider.h  main.cpp  native_video_writer.cpp
src/ui/app/: CMakeLists.txt  Main.qml  MainLayout.qml
src/ui/components/: ActiveLabel.qml  BootOverlay.qml  BrowseDetailPane.qml  BrowseList.qml  BrowseListDetailView.qml  CMakeLists.txt  Carousel.qml  CommercialNoticeModal.qml  ContextMenu.qml  CoreStatusPill.qml  DeferredAction.qml  FirstRunIndexModal.qml  FocusedMediaDetailController.qml  HeaderBar.qml  HubCategoryTile.qml  ListPickerModal.qml  LoadingIndicator.qml  LogUploadModal.qml  Modal.qml  PagedGrid.qml  QrCodeModal.qml  RapidScrollIndicator.qml  ScreenStateOverlay.qml  SettingsField.qml  SettingsSectionHeader.qml  Tile.qml  TileLoader.qml  TopStatusStrip.qml
src/ui/screens/: AboutScreen.qml  CMakeLists.txt  FavoritesScreen.qml  GamesScreen.qml  HubScreen.qml  (+5 more)
tests/ui/: CMakeLists.txt  tst_browse_detail_pane.qml  tst_deferred_action.qml  tst_list_picker_modal.qml  tst_motion.qml  tst_navigation.qml  tst_paged_grid.qml  tst_persistence.qml  tst_resources.qml  tst_sizing.qml  tst_smoke.qml
(+44 files in other folders)
