# Zaparoo Launcher
# Copyright (c) 2026 Wizzo Pty Ltd and the Zaparoo Project contributors.
# SPDX-License-Identifier: LicenseRef-PolyForm-Noncommercial-1.0.0

[package]
name         = "zaparoo-launcher-rs"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
publish      = false

[lib]
name       = "zaparoo_launcher_rs"
crate-type = ["staticlib"]
path       = "src/lib.rs"

[lints]
workspace = true

[dependencies]
zaparoo-core = { path = "../zaparoo-core" }
cxx          = { workspace = true }
cxx-qt       = { workspace = true }
cxx-qt-lib   = { workspace = true, features = ["qt_gui", "qt_qml", "qt_quickcontrols"] }
tokio        = { workspace = true, features = ["rt-multi-thread"] }
tracing      = { workspace = true }
time         = { workspace = true }
libc         = "0.2"

[build-dependencies]
cxx-qt-build = { workspace = true, features = ["link_qt_object_files"] }
